fixed spacing for homepage features

--- a/css/layout.css
+++ b/css/layout.css
@@ -135,13 +135,13 @@ footer h2 {
 }
 
 #home-features-wrapper {
-	padding-top:25px;
-	padding-bottom:25px;
+	padding-top:37px;
+	padding-bottom:38px;
 }
 
 .home-feature-panel {
-	margin-top:25px;
-	margin-bottom:25px;
+	margin-top:13px;
+	margin-bottom:12px;
 }
 
 .home-feature-panel .panel-body {
@@ -166,85 +166,6 @@ footer h2 {
 
 .home-feature-panel h4.connect:last-child {
 	margin-bottom:5px;
-}
-
-/* RESUME */
-
-.res-content {
-    padding-bottom: 30px;
-}
-
-.res-section {
-    padding-bottom: 20px;
-}
-
-.res-section h3 {
-    margin-top:0;
-}
-
-#res-skills dt, dd {
-    margin-bottom:10px;
-}
-
-#res-highlights ul li {
-    margin:10px inherit;
-}
-
-#res-emp .clients {
-    padding-left: 40px;
-}
-
-#res-emp .clients ul {
-    list-style-type: circle;
-}
-
-.employer {
-    margin-bottom:20px;
-}
-
-.employer:last-child {
-    margin-bottom:0;
-}
-
-.employer h4 {
-    margin-top:0;
-    margin-bottom:0;
-}
-
-.affix {
-    top:80px;
-}
-
-#res-nav-list li.active {
-    font-weight:bold;
-}
-
-#res-nav-list li.active.no-change {
-    font-weight:normal;
-}
-
-#res-nav-list li li {
-    display: none;
-}
-
-#res-nav-list li.active li {
-    display:block;
-    font-weight:normal;
-}
-
-#res-nav-list li.active li.active {
-    font-weight:bold;
-}
-
-@media (min-width: 992px) {
-    .affix {
-        width:205px;
-    }
-}
-@media (min-width: 1200px) {
-    .affix {
-        width:255px;
-    }
 }
 
 article img {
